# jaraco.classes

./: .coveragerc  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  ClassUtil.py  NEWS.rst  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
docs/: conf.py  index.rst
jaraco/classes/: ancestry.py  meta.py  properties.py
jaraco/util/: classutil.py  meta.py  properties.py
lib/: ClassUtil.py
newsfragments/: 13.feature.rst
